----------------------------------
SimpleMail Open Source - ChangeLog
----------------------------------

2005-12-25  Bernd Gollesch <bgollesch@sime.at>
	* doc/amiga/SimpleMail.guide: Added importance for composed mail (RFE #1388866)
	* amiga-mui/composewnd.c: Added importance for composed mail (RFE #1388866)
	* mail.(c|h): Added importance for composed mail (RFE #1388866)

2005-12-24  Release Version 0.28

2005-12-24  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/readwnd.c: Update the folder_path of the moved mail in the data instance.
	* folder.c: Also check the pending mail array in folder_find_by_mail() function.

2005-10-15  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/support.c: Added the foldertree to the cyclechain and make it the
	  active object in sm_request_folder() (RFE #1304106).

2005-09-19  Bernd Gollesch <bgollesch@sime.at>
	* taglines.c: Fixed Bug #1289240 where random chars can appear after a
	  signature which is imported from "ENV:Signature".

2005-09-18  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/appicon.c: Invoking the "Delete" menuitom of the workbench icons
	  menu now exits simplemail.
	* amiga-mui/arexx.c: Added "QUIT" command to exit simplemail.
	* amiga-mui/configwnd.c: Added two new config options to the "Reading" group.
	* amiga-mui/gui_main.c: Added app_quit() function to exit simplemail.
	* amiga-mui/mainwnd.c: Added the compile date to the "About" requester.
	* amiga-mui/readwnd.c: The window now remembers its scroll direction.
	  Added support for the two new config options for the "Delete" and "Move"
	  (Bug #1246263) behavior (see guide file for description).
	* configuration.(c|h): Added two new config options.
	* doc/amiga/SimpleMail.guide: Added the description of the new functions.
	* mail.c: Fixed bug  #1258821 "Reply to all".
	* print.c: Small correction for the printout.
	* text2html.c: Corrected a display error when email addresses get recognised
	  (last fix doesn't work correctly in all circumstances).
